--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paliedispari</title>
 </head>
+
 <body>
-    
+    <div id="container">
+        <label for="text">Inserisci Parola</label>
+        <input type="text" id="input_text">
+        <button>Invia</button>
+    </div>
+
+
     <script src="./assets/js/main.js"></script>
 </body>
+
 </html>
